--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
 .App {
   text-align: center;
 }
-
+@font-face {
+  font-family: 'Cardenio-Modern';
+  src: url('./fonts/Cardenio-Modern.ttf.woff') format('woff'),
+    url('./fonts/Cardenio-Modern.ttf.svg#Cardenio-Modern') format('svg'),
+    url('./fonts/Cardenio-Modern.ttf.eot'),
+    url('./fonts/Cardenio-Modern.ttf.eot?#iefix') format('embedded-opentype');
+  font-weight: normal;
+  font-style: normal;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
