--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,15 @@
   text-align: center;
 }
 @font-face {
-  font-family: 'Cardenio-Modern';
-  src: url('./fonts/Cardenio-Modern.ttf.woff') format('woff'),
-    url('./fonts/Cardenio-Modern.ttf.svg#Cardenio-Modern') format('svg'),
-    url('./fonts/Cardenio-Modern.ttf.eot'),
-    url('./fonts/Cardenio-Modern.ttf.eot?#iefix') format('embedded-opentype');
+  font-family: 'Cardenio-Modern-Bold';
+  src: url('./fonts/Cardenio_Modern_Bold.eot?') format('eot'),
+    url('./fonts/Cardenio_Modern_Bold.woff') format('woff'),
+    url('./fonts/Cardenio_Modern_Bold.ttf') format('truetype'),
+    url('./fonts/Cardenio_Modern_Bold.svg#CardenioModern-Bold') format('svg');
   font-weight: normal;
   font-style: normal;
 }
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
